# pepper

./: pyproject.toml  tox.ini
pepper/: script.py
tests/: conftest.py
tests/unit/: test_init.py  test_login_details.py  test_retcodes_fail_fail.py  test_retcodes_fail_none.py  test_retcodes_fail_pass.py  test_retcodes_none_none.py  test_retcodes_pass_fail.py  test_retcodes_pass_none.py  test_retcodes_pass_pass.py
